# Projet-BRAIN

./: .gitignore  Claude_Tracer_Ligne.py  LICENSE  MesCouilles.py  current_batch.json  exam_history.json  geometric_engine.py  grid_results.json  grid_results_consolidated.json  grid_results_hybrid.json  grid_results_with_patterns.json  grid_results_with_propagations.json  main_solver.py  selen.py  solution_brain.json
ARTHUR/: ROADMAP.md  arc-agi_reasoning_engine.py  arc_geometric_detection.py  arc_neuro_bridge.py  arc_test_grids.json  package-lock.json  package.json  test_runner.py
Arthur_1/: arc_geometric_detection.py  pyproject.toml
Arthur_1/src/: arc_neuro_bridge.py
Arthur_1/src/arc_brain.egg-info/: PKG-INFO
Arthur_1/src/arc_brain/cli/: main.py
Arthur_1/src/arc_brain/core/: color.py  models.py
Arthur_1/src/arc_brain/perception/: grid_utils.py  visualize.py
Arthur_1/src/arc_brain/reasoning/: actions.py  search.py  solver.py  state.py
Arthur_1/test_failures_2025-10-20_16-09-28/: test_report.txt
Arthur_1/tests/fixtures/: arc_test_grids.json
Arthur_1/tests/unit/: test_bridge_prompt.py  test_perception_detectors.py
Paul/: batch_runner.py  dashboard.py  exam_runner.py  generate_exam.py  geometry.py  knowledge_creation.py  perception.py  reasoning.py  simple.json  test_color.json  test_pipeline.py
Selen/: colors.py  geometry.py  perception.py  test_pipeline.py
Timothée/: 025d127b.json  Complete_visualization.py  Dtect.py  Dtect_Visualize_1  Dtect_Visualize_2  Dtect_Visualize_3  Dtect_Visualize_4  Dtect_and_show  Dtect_and_show.py  Dtect_from_json  tst  (+22 more)
(+389 files in other folders)
